# ai-mate

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  README_CN.md  SANITIZATION_REPORT.md  pyproject.toml
companion/: cli.py  logger.py  token_tracker.py
companion/agent/: __init__.py  persona.py  tools.py
companion/config/: emotions.json  habits.json  relationship.json  scenes.json  triggers.json
companion/config/states/: trigger_state.json
companion/mobile/: README.md  build.sh
companion/mobile/android/: settings.gradle
companion/modules/: registry.py
companion/modules/emotion/: __init__.py  circadian.py  contagion.py  core.py  event_impact.py  residue.py
companion/modules/extras/: __init__.py  habit_tracker_src.py  time_awareness.py  trending_src.py  trending_weibo_src.py
companion/modules/feishu/: __init__.py  bot.py
companion/modules/liveness/: __init__.py  liveness_dims_src.py  liveness_metrics_src.py  (+1 more)
companion/plugins/: __init__.py
companion/scheduler/: __init__.py
companion/tools/: __init__.py
companion/webui/: __init__.py  agent_wrapper.py  server.py
docs/: DEVELOPMENT_GUIDE.md  DEVELOPMENT_GUIDE_CN.md  PRODUCTION_GUIDE_CN.md
mini_agent/: __init__.py  agent.py  cli.py  config.py  llm.py  logger.py  retry.py
mini_agent/config/: config-example.yaml  system_prompt.md
mini_agent/tools/: base.py  bash_tool.py  file_tools.py  mcp_loader.py  note_tool.py  skill_loader.py
scripts/: migrate_persona_isolation.py
tests/: test_git_mcp.py  test_llm.py  test_mcp.py  test_session_integration.py  test_skill_loader.py  test_tools.py
tests/companion/: test_agent_tools.py  test_code_review_fixes.py  test_e2e.py  test_edge_cases.py  test_feishu_bot.py  test_plugins.py  test_proactive_toggle.py  test_sandbox_chat.py  test_scheduler.py  test_webui_config.py
(+68 files in other folders)
